// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the Gallery page 1`] = `
<div>
  <h1>
    Gallery
  </h1>
  <div
    class="footer"
  >
    <div
      class="footer__image-container"
    >
      <img
        alt="logo"
        class="footer__logo"
        src="footer-logo.svg"
      />
    </div>
    <ul
      class="footer__links-container"
    >
      <li
        class="footer__list-item"
      >
        <a
          class="footer__link"
          href="/about"
        >
          About
        </a>
      </li>
      <li
        class="footer__list-item"
      >
        <a
          class="footer__link"
          href="/services"
        >
          Services
        </a>
      </li>
      <li
        class="footer__list-item"
      >
        <a
          class="footer__link"
          href="/gallery"
        >
          Gallery
        </a>
      </li>
      <li
        class="footer__list-item"
      >
        <a
          class="footer__link"
          href="/terms-and-conditions"
        >
          Terms and conditions
        </a>
      </li>
      <li
        class="footer__list-item"
      >
        <a
          class="footer__link"
          href="/faqs"
        >
          FAQs
        </a>
      </li>
      <li
        class="footer__list-item"
      >
        <a
          class="footer__link"
          href="/get-in-touch"
        >
          Contact
        </a>
      </li>
    </ul>
    <hr />
    <div
      class="footer__secondary-links-container"
    >
      <div
        class="footer__copyright-text"
      >
        © 2022 The Positive Pup. All rights reserved.
      </div>
      <div
        class="footer__secondary-links-container--social-links"
      >
        <a
          href="https://www.facebook.com/thepositivepupdogtraining"
          target="blank"
        >
          <img
            alt="link to facebook"
            src="facebook-logo.svg"
          />
        </a>
        <a
          href="https://www.instagram.com/the_positivepup/"
          target="blank"
        >
          <img
            alt="link to instagram"
            src="instagram-logo.svg"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the footer component 1`] = `
<div>
  <h1>
    Gallery
  </h1>
  <div
    class="footer"
  >
    <div
      class="footer__image-container"
    >
      <img
        alt="logo"
        class="footer__image-container--logo"
        src="footer-logo.svg"
      />
    </div>
    <ul
      class="footer__links-container"
    >
      <li
        class="footer__list-item"
      >
        <a
          class="footer__links"
          href="/about"
        >
          About
        </a>
      </li>
      <li
        class="footer__list-item"
      >
        <a
          class="footer__links"
          href="/services"
        >
          Services
        </a>
      </li>
      <li
        class="footer__list-item"
      >
        <a
          class="footer__links"
          href="/Gallery"
        >
          Gallery
        </a>
      </li>
      <li
        class="footer__list-item"
      >
        <a
          class="footer__links"
          href="/terms-and-conditions"
        >
          Terms and conditions
        </a>
      </li>
      <li
        class="footer__list-item"
      >
        <a
          class="footer__links"
          href="/faqs"
        >
          FAQs
        </a>
      </li>
      <li
        class="footer__list-item"
      >
        <a
          class="footer__links"
          href="/get-in-touch"
        >
          Contact
        </a>
      </li>
    </ul>
    <hr />
    <div
      class="footer__secondary-links-container"
    >
      <div
        class="footer__secondary-links-container--copyright"
      >
        © 2022 The Positive Pup. All rights reserved.
      </div>
      <div
        class="footer__secondary-links-container--social-links"
      >
        <a
          href="https://www.facebook.com/thepositivepupdogtraining"
          target="blank"
        >
          <img
            alt="link to facebook"
            src="facebook-logo.svg"
          />
        </a>
        <a
          href="https://www.instagram.com/the_positivepup/"
          target="blank"
        >
          <img
            alt="link to instagram"
            src="instagram-logo.svg"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
